[gd_scene load_steps=5 format=3 uid="uid://dg5lsubt653gf"]

[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="1_elkqt"]
[ext_resource type="Script" path="res://scenes/day_ex/ui/day_ex_ui.gd" id="2_4b3uh"]
[ext_resource type="PackedScene" uid="uid://dxxd4wyd36xa6" path="res://scenes/_shared/ui/two_line_timed_label.tscn" id="3_4i2nv"]
[ext_resource type="PackedScene" uid="uid://b0itsp3jm2p1k" path="res://scenes/_shared/ui/pause_menu.tscn" id="4_13kum"]

[node name="DayExUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_elkqt")
script = ExtResource("2_4b3uh")

[node name="StartLabels" parent="." instance=ExtResource("3_4i2nv")]
layout_mode = 1
text_1 = "LEVEL_START_LINE_0_DAY_EX"
text_2 = "LEVEL_START_LINE_1"
font_color_normal = Color(0.945098, 0.188235, 0.188235, 1)
font_color_fade = Color(0.94902, 0.505882, 0.505882, 1)
font_outline_color_fade = Color(0.345098, 0.345098, 0.345098, 1)
duration_sec = 1.6
label_2_visible_delay_sec = 0.8
preview_labels = false

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="PauseMenu" parent="." instance=ExtResource("4_13kum")]
visible = false
layout_mode = 1
offset_left = -93.0
offset_right = 93.0
show_auto_fire = false

[connection signal="finished" from="StartLabels" to="." method="_on_start_labels_finished"]
